# SEO-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
ezydrag-frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
ezydrag-frontend/src/: App.tsx  index.css
ezydrag-frontend/src/components/content/: CMSIntegration.tsx  ContentPipeline.tsx  DraftEditor.tsx  TopicDiscovery.tsx
ezydrag-frontend/src/components/dashboard/: ActionFeed.tsx  BacklinkTable.tsx  BacklinkVelocityChart.tsx  KpiCard.tsx  ToxicityRadar.tsx
ezydrag-frontend/src/components/layout/: AppSidebar.tsx  DashboardStateWrapper.tsx  TopNav.tsx
ezydrag-frontend/src/components/onpage/: CTROptimizer.tsx  CannibalizationGuard.tsx  ContentDecay.tsx  InternalLinkOrchestrator.tsx  TrafficTrendChart.tsx
ezydrag-frontend/src/components/technical/: RedirectMapper.tsx  (+3 more)
ezydrag-frontend/src/context/: ClientContext.tsx
ezydrag-frontend/src/data/: contentMockData.ts  mockData.ts  onPageMockData.ts  technicalMockData.ts
ezydrag-frontend/src/hooks/: useSeoApi.ts
ezydrag-frontend/src/lib/: api.ts
ezydrag-frontend/src/pages/: Actions.tsx  ContentCreation.tsx  Index.tsx  OffPage.tsx  OnPageAgent.tsx  Technical.tsx
src/seo_agents/: __init__.py  graph.py  prompts.py  state.py  structured_data_extractor.py  tools.py  utils.py
src/seo_agents/agents/: __init__.py  content.py  offpage.py  onpage.py  technical.py
src/seo_agents/api/: main.py  routes.py  seed.py
src/seo_agents/services/: __init__.py  ahrefs.py  crawler.py  dataforseo.py  pagespeed.py  search_console.py  semrush.py
